- upgraded to latest molindo-utils snapshot - use URIUtils.resolve(..) instead of RequestUtils.toAbsolutePath(..) for URL generation